# Differentiator

./: .gitignore  CMakeLists.txt  Makefile  README.md  log.html
headers/: DiffFunctions.hpp  DiffTreeDSL.hpp  Differentiator.hpp  FunnyMathComments.hpp  LatexWriter.hpp  MinMax.hpp  OneginFunctions.hpp  Optimiser.hpp  RecursiveDescent.hpp  Sort.hpp  StringFunctions.hpp  Tree.hpp  TreeSettings.hpp  TreeSettings.ini  Utils.hpp
src/: Differentiator.cpp  LatexWriter.cpp  OneginFunctions.cpp  Optimiser.cpp  RecursiveDescent.cpp  Sort.cpp  StringFunctions.cpp  Tree.cpp  Utils.cpp  main.cpp
